<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_auth">

    <LinearLayout
        android:id="@+id/topHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/loginContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/bg_circle_white"
            android:elevation="4dp"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_gps" />

        </LinearLayout>

        <!-- App name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Subtitle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/app_slogan"
            android:textColor="@color/platinum"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="363dp"
        android:layout_height="476dp"
        android:background="@drawable/bg_white_container_auth"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="20dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/btnGoogleCustom"
            android:layout_width="305dp"
            android:layout_height="60dp"
            android:background="@drawable/ripple_google_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/googleLogo"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/googleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/continue_with_google"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
        <!-- or separator -->
        <LinearLayout
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/chinese_silver" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/or"
                android:textColor="@color/taupe_gray"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/chinese_silver" />
        </LinearLayout>

        <!-- Email warning -->

        <TextView
            android:id="@+id/loginEmailWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invalid_email"
            android:textColor="@color/coral_red"
            android:textSize="12sp"
            android:visibility="gone"
            android:paddingBottom="2dp"/>

        <!--Email and password fields -->
        <EditText
            android:id="@+id/loginEmailInput"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_inputs_auth"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/spanish_gray" />

        <EditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_inputs_auth"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/spanish_gray" />


        <LinearLayout
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ripple_auth_buttons"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/sonic_silver"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/sign_up"
                android:textColor="@color/violet_blue"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>